gitops-factory/namespaces/logistics-svc/shared.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: logistics-svc
  labels:
    app.kubernetes.io/name: default-deny-all
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: '{"apiVersion":"v1","kind":"redacted"}'
  uid: 0bfd22cb-3cb5-4dcf-bd60-5271e1d277c5
  resourceVersion: '8842856'
  generation: 8
  creationTimestamp: '2026-04-16T08:11:26Z'
  managedFields:
  - manager: kubectl-client-side-apply
    operation: Update
    apiVersion: v1
    time: '2026-04-16T08:11:26Z'
    fieldsType: FieldsV1
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
